# blender-addon-template

./: .gitignore  BAT_EPIC.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  pyproject.toml  pytest.ini
addon/my_addon/: __init__.py
addon/my_addon/blender/: operators.py  panels.py  registration.py
addon/my_addon/core/: client.py  state.py
tests/blender/: test_blender_glue.py
tests/unit/: test_core.py
tools/: build_zip.py  run_blender_tests.py
